horizontal scroll fixed header fixed

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ header{
     line-height: 80px;
 }
 #logoHolder{
-    width: 250px;
+    width: 300px;
     height: 80px;
     /*indigo/#373737*/
     float: left;
